@@ -6,4 +6,4 @@
 echo TARGET_AMQ_BROKET
 
 echo "Starting rules_cep"
-java -jar $HOME/target/$APPL
+java -Xmx1024m -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -Xloggc:/home/psteiner/target/gc.log -jar $HOME/target/$APPL
